--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-It's working.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Redirecionando...</title>
+  <script>
+    // Redireciona para o novo site após 0 segundos
+    window.location.href = "https://www.orepelasnacoes.com";
+  </script>
+</head>
+<body>
+  <p>Você está sendo redirecionado...</p>
+</body>
+</html>
