--- a/builder/index.html
+++ b/builder/index.html
@@ -1,11 +1,156 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  Está funcionando! 
-</body>
-</html>
+<style>
+
+/* Layout principal */
+.country-builder {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 80vh;
+  font-family: Arial, sans-serif;
+}
+
+/* Coluna esquerda */
+.country-builder__form {
+  padding: 24px;
+  overflow-y: auto;
+  background: #fafafa;
+}
+
+/* Coluna direita */
+.country-builder__output {
+  padding: 24px;
+  background: #0f0f0f;
+  color: #d4d4d4;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Títulos de seção */
+.country-builder__section-title {
+  margin-top: 28px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+/* Inputs */
+.country-builder__input,
+.country-builder__textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Textareas */
+.country-builder__textarea {
+  min-height: 80px;
+  resize: vertical;
+}
+
+/* Botões */
+.country-builder__generate-btn,
+.country-builder__copy-btn {
+  margin-top: 20px;
+  padding: 12px;
+  font-size: 14px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.country-builder__generate-btn {
+  background: #2b6cb0;
+  color: #fff;
+}
+
+.country-builder__copy-btn {
+  background: #3a3a3a;
+  color: #fff;
+}
+
+/* Editor */
+.country-builder__editor {
+  flex: 1;
+  background: #1e1e1e;
+  padding: 16px;
+  overflow: auto;
+  font-family: monospace;
+  font-size: 13px;
+  border-radius: 4px;
+}
+
+</style>
+
+
+<div class="country-builder">
+
+  <!-- FORMULÁRIO -->
+  <div class="country-builder__form">
+    
+    <h1>Construtor</h1>
+
+    <!-- Identificação -->
+    <div class="country-builder__section">
+      <div class="country-builder__section-title">Identificação</div>
+      <input class="country-builder__input" placeholder="Nome do país">
+      <input class="country-builder__input" placeholder="Slug (ex: brasil)">
+      <input class="country-builder__input" placeholder="Continente">
+    </div>
+
+    <!-- Imagens -->
+    <div class="country-builder__section">
+      <div class="country-builder__section-title">Imagens</div>
+      <input class="country-builder__input" placeholder="URL imagem hero">
+      <input class="country-builder__input" placeholder="URL bandeira">
+      <input class="country-builder__input" placeholder="URL mapa">
+    </div>
+
+    <!-- Textos -->
+    <div class="country-builder__section">
+      <div class="country-builder__section-title">Textos Principais</div>
+      <textarea class="country-builder__textarea" placeholder="Descrição do país"></textarea>
+      <textarea class="country-builder__textarea" placeholder="Versículo em destaque"></textarea>
+      <textarea class="country-builder__textarea" placeholder="Texto do footer"></textarea>
+    </div>
+
+    <!-- Estatísticas -->
+    <div class="country-builder__section">
+      <div class="country-builder__section-title">Estatísticas</div>
+      <input class="country-builder__input" placeholder="População">
+      <input class="country-builder__input" placeholder="Religião majoritária">
+      <input class="country-builder__input" placeholder="% Cristãos">
+      <input class="country-builder__input" placeholder="Idioma principal">
+    </div>
+
+    <!-- Pedidos de oração -->
+    <div class="country-builder__section">
+      <div class="country-builder__section-title">Pedidos de Oração</div>
+      <textarea class="country-builder__textarea" placeholder="Pedido 1"></textarea>
+      <textarea class="country-builder__textarea" placeholder="Pedido 2"></textarea>
+      <textarea class="country-builder__textarea" placeholder="Pedido 3"></textarea>
+      <textarea class="country-builder__textarea" placeholder="Pedido 4"></textarea>
+    </div>
+
+    <!-- Ação -->
+    <button class="country-builder__generate-btn">
+      Gerar código
+    </button>
+
+  </div>
+
+  <!-- SAÍDA -->
+  <div class="country-builder__output">
+
+    <pre class="country-builder__editor">
+&lt;!-- Código gerado aparecerá aqui --&gt;
+    </pre>
+
+    <button class="country-builder__copy-btn">
+      Copiar
+    </button>
+
+  </div>
+
+</div>
